--- a/doc/patagonia/css/common.css
+++ b/doc/patagonia/css/common.css
@@ -165,7 +165,7 @@ span#site a:hover { color:#fff; }
 
 .white_wrap { z-index:1000000; position:absolute; top:0; left:0; 
 		width:100%; height:100%; opacity:0;
-		background-color:#fff; }
+		background-color:#fff; overflow:hidden; }
 
 .white_wrap a, .white_wrap span { color:#aaa; }
 
