--- a/doc/patagonia/css/home.css
+++ b/doc/patagonia/css/home.css
@@ -1,7 +1,7 @@
 /*Layout*/
 
-.big_box { width:100%; height:100%; opacity:0; 
-		background-color:#fff; }
+.big_box { position:relative; width:100%; height:100%; opacity:0; 
+		background-color:#fff; overflow:hidden; }
 
 
 
