--- a/doc/patagonia/css/sub.css
+++ b/doc/patagonia/css/sub.css
@@ -6,12 +6,12 @@ html, body { background-color:#fff; }
 
 /*contents*/
 
-.wrap_show { z-index:10000; position:relative; top:6%; left:4%; 
-		width:92%; height:94%; 
+.wrap_show { z-index:10000; position:relative; top:6%; left:0; 
+		width:100%; height:94%; 
 		/*border:1px solid #fff;*/ }
 
 .wrap { position:absolute; top:0; left:0; 
-		width:100%; height:100%; opacity:0;
+		width:100%; height:100%; 
 		/*border:1px solid red;*/ }
 
 
@@ -20,8 +20,8 @@ html, body { background-color:#fff; }
 
 /*contents sub title*/
 
-.title_wrap { position:absolute; top:0; left:0; 
-			width:100%; height:100%;
+.title_wrap { position:absolute; top:0; left:4%; 
+			width:92%; height:100%; opacity:0;
 			/*border:1px solid blue;*/ }
 
 #title { position:absolute; top:50%; left:5%;
