--- a/doc/moon/css/common.css
+++ b/doc/moon/css/common.css
@@ -85,8 +85,8 @@ header {
 /* 'Didot font -> Image' Area */
 #logo a {
 	font-family:linotype-didot, 'Playfair Display', serif;
-	font-size:20px; font-weight:700; line-height:32px;
-	letter-spacing:1px; 
+	font-size:20px; font-weight:700;
+	line-height:32px; letter-spacing:1px; 
 	white-space:nowrap;
 }
 
