--- a/doc/equals/css/index.css
+++ b/doc/equals/css/index.css
@@ -21,7 +21,18 @@ img { border:none; vertical-align:middle; width:100%; }
 
 
 /* Mouse Cursor */
-#cursor { z-index:500000; position:absolute; width:30px; height:30px; border-radius:50px; margin-top:-10px; margin-left:15px; background-color:rgba(167,176,181,0.5); } 
+#cursor { 
+	z-index:500000; 
+	position:absolute; 
+	width:30px; height:30px; 
+	border-radius:50px; 
+	margin-top:-10px; margin-left:15px; 
+	background-color:rgba(167,176,181,0.5); 
+	-webkit-transition:background 0.3s;
+	-moz-transition:background 0.3s;
+	-o-transition:background 0.3s;
+	transition:background 0.3s;
+} 
 
 
 
