--- a/doc/patagonia/css/common.css
+++ b/doc/patagonia/css/common.css
@@ -285,29 +285,72 @@ span#site a:hover { color:#fff; }
 
 /*media query*/
 
-@media screen and (min-width:1000px) {  
+@media screen and (min-width:1601px) {  
 	/** { color:white; }*/
 }
 
-@media screen and (min-width:650px) and (max-width:999px) {  
-	/** { color:red; }*/
+@media screen and (min-width:1001px) and (max-width:1600px) { 
 
-	header, footer { left:5%; width:90%; }
+	/*menu*/
 
-	#left h2 { font-size:50px; }
-	#left h3 { font-size:25px; }
-	#right ul li a { font-size:27px; }
+	#left h2 { 
+		font-size:50px; 
+	}
+	#left h3 { 
+		font-size:25px; 
+	}
+	#right ul li a { 
+		font-size:27px; 
+	}
 
 }
 
-@media screen and (max-width:649px) { 
+@media screen and (min-width:651px) and (max-width:1000px) {  
+	/** { color:red; }*/
+
+	header, footer { 
+		left:5%; width:90%; 
+	}
+
+
+	/*menu*/
+
+	#left h2 { 
+		font-size:50px; 
+	}
+	#left h3 { 
+		font-size:25px; 
+	}
+	#right ul li a { 
+		font-size:27px; 
+	}
+
+}
+
+@media screen and (max-width:650px) { 
 	/** { color:orange; }*/
 
-	header { z-index:1000000; top:50%; left:7%; width:86%; 
-			-webkit-transform:translateY(-50%); -ms-transform:translateY(-50%); -moz-transform:translateY(-50%); -o-transform:translateY(-50%); transform:translateY(-50%);}
+	header { 
+		z-index:1000000; 
+		top:50%; left:7%; 
+		width:86%; 
+		-webkit-transform:translateY(-50%); 
+		-ms-transform:translateY(-50%); 
+		-moz-transform:translateY(-50%); 
+		-o-transform:translateY(-50%); 
+		transform:translateY(-50%);
+	}
 
-	#logo a { width:200px; height:37px; }
+	#logo a { 
+		width:200px; 
+		height:37px; 
+	}
 
-	.top_wrap, .bottom_wrap, #load, .white_wrap { display:none; }
+	.top_wrap, 
+	.bottom_wrap, 
+	#load, 
+	.white_wrap { 
+		display:none; 
+	}
 	
 }
