--- a/doc/patagonia/css/common.css
+++ b/doc/patagonia/css/common.css
@@ -15,16 +15,27 @@
 
 /*reset*/
 
-html, body { position:relative; width:100%; height:100%; }
+html, body { 
+	position:relative; 
+	width:100%; height:100%; 
+}
 
-body,p,h1,h2,h3,h4,h5,h6,ul,ol,li { margin:0; padding:0; }
+body,p,h1,h2,h3,h4,h5,h6,ul,ol,li { 
+	margin:0; padding:0; 
+}
 body,p,h1,h2,h3,h4,h5,h6,a {
-	font-family:'Poppins', sans-serif; font-size:15px; font-weight:300;
+	font-family:'Poppins', sans-serif; 
+	font-size:15px; font-weight:300;
 	text-decoration:none; color:#aaa;
 }
 
-ul,ol,li { list-style:none; }
-img { border:none; vertical-align:middle; }
+ul,ol,li { 
+	list-style:none; 
+}
+img { 
+	border:none; 
+	vertical-align:middle; 
+}
 
 ::-moz-selection {
    background-color:#c7b299;
@@ -63,98 +74,194 @@ img { border:none; vertical-align:middle; }
 
 /*Header*/
 
-header { z-index:100000; position:fixed; top:35px; left:3%; 
-		width:94%; height:25px; 
-		/*border:1px solid white;*/ }
+header { 
+	z-index:100000; 
+	position:fixed;
+	top:35px; left:3%; 
+	width:94%; height:25px; 
+}
 
 
 
-#logo { float:left; 
-		/*border:1px solid red;*/ }
-#logo a { display:block; width:160px; height:30px; }
-#logo img { width:100%; }
+#logo { 
+	float:left; 
+}
+#logo a { 
+	display:block; 
+	width:160px; height:30px; 
+}
+#logo img { 
+	width:100%; 
+}
 
 
 
-.top_wrap { float:right; 
-			/*border:1px solid blue;*/ }
+.top_wrap { 
+	float:right; 
+}
 
 
 
 /*Language*/
 
-ul.lang, ul.m_lang { margin-top:2px; float:left; }
+ul.lang, ul.m_lang { 
+	margin-top:2px; 
+	float:left; 
+}
 
-ul.lang li, ul.m_lang li { float:left; /*border:1px solid red;*/ }
-ul.lang li+li, ul.m_lang li+li { margin-left:50px; }
+ul.lang li, ul.m_lang li { 
+	float:left; 
+	/*border:1px solid red;*/ 
+}
+ul.lang li+li, ul.m_lang li+li { 
+	margin-left:50px; 
+}
 
-ul.lang li a:hover { color:#fff; }
-ul.m_lang li a:hover { color:#a67c52; }
+ul.lang li a:hover { 
+	color:#fff; 
+}
+ul.m_lang li a:hover { 
+	color:#a67c52; 
+}
 
 
 
 /*Menu Link*/
 
-#menu, #close { position:relative; float:left; 
-		cursor:pointer; text-align:right; margin-left:100px; }
+#menu, #close { 
+	position:relative; 
+	float:left; 
+	cursor:pointer; 
+	text-align:right; 
+	margin-left:100px; 
+}
 
 #menu span#m_text, 
-#close span#c_text { margin-right:50px; }
+#close span#c_text { 
+	margin-right:50px; 
+}
 
-#close span#c_text { color:#aaa; }
+#close span#c_text { 
+	color:#aaa; 
+}
 
-#menu:hover span#m_text { color:#fff; }
-#close:hover span#c_text { color:#a67c52; }
+#menu:hover span#m_text { 
+	color:#fff; 
+}
+#close:hover span#c_text { 
+	color:#a67c52; 
+}
 
 
 
 /*Menu Burger*/
 
-a#burger, a#exit { z-index:100000; display:block;
-		position:absolute; top:0; right:0;
-		width:25px; height:25px; }
+a#burger, a#exit { 
+	z-index:100000; 
+	display:block;
+	position:absolute; 
+	top:0; right:0;
+	width:25px; height:25px; 
+}
 
 a#burger span, a#exit span {
-	display:block; position:absolute; top:50%;
+	display:block; 
+	position:absolute; 
+	top:50%;
 	width:100%; height:0; 
 }
 
 a#burger span {
 	border-bottom:1px solid #aaa;
-	-webkit-transform:translateY(-50%); -ms-transform:translateY(-50%); -moz-transform:translateY(-50%); -o-transform:translateY(-50%); transform:translateY(-50%);
+	-webkit-transform:translateY(-50%); 
+	-ms-transform:translateY(-50%); 
+	-moz-transform:translateY(-50%); 
+	-o-transform:translateY(-50%); 
+	transform:translateY(-50%);
 }
 
 
 
 a#burger span:before, a#burger span:after {
-	content:''; position:absolute; top:0; left:0; 
-	width:100%; height:0; border-bottom:1px solid #aaa; 
-	-webkit-transition:0.3s all; -moz-transition:0.3s all; -o-transition:0.3s all; transition:0.3s all;
+	content:''; 
+	position:absolute; 
+	top:0; left:0; 
+	width:100%; height:0; 
+	border-bottom:1px solid #aaa; 
+	-webkit-transition:0.3s all; 
+	-moz-transition:0.3s all; 
+	-o-transition:0.3s all; 
+	transition:0.3s all;
 }
 
-a#burger span:before { -webkit-transform:translateY(-8px); -ms-transform:translateY(-8px); -moz-transform:translateY(-8px); -o-transform:translateY(-8px); transform:translateY(-8px); }
-a#burger span:after { -webkit-transform:translateY(8px); -ms-transform:translateY(8px); -moz-transform:translateY(8px); -o-transform:translateY(8px); transform:translateY(8px); }
+a#burger span:before { 
+	-webkit-transform:translateY(-8px); 
+	-ms-transform:translateY(-8px); 
+	-moz-transform:translateY(-8px); 
+	-o-transform:translateY(-8px); 
+	transform:translateY(-8px); 
+}
+a#burger span:after { 
+	-webkit-transform:translateY(8px); 
+	-ms-transform:translateY(8px); 
+	-moz-transform:translateY(8px); 
+	-o-transform:translateY(8px); 
+	transform:translateY(8px); }
 
-#menu:hover a#burger span { border-color:#fff; }
-#menu:hover a#burger span:before { border-color:#fff; -webkit-transform:rotate(90deg); -ms-transform:rotate(90deg); -moz-transform:rotate(90deg); -o-transform:rotate(90deg); transform:rotate(90deg); }
-#menu:hover a#burger span:after { opacity:0; }
+#menu:hover a#burger span { 
+	border-color:#fff; 
+}
+#menu:hover a#burger span:before { 
+	border-color:#fff; 
+	-webkit-transform:rotate(90deg); 
+	-ms-transform:rotate(90deg); 
+	-moz-transform:rotate(90deg); 
+	-o-transform:rotate(90deg); 
+	transform:rotate(90deg); 
+}
+#menu:hover a#burger span:after { 
+	opacity:0; 
+}
 
 
 
 /*Menu Close*/
 
 a#exit span:before, a#exit span:after {
-	content:''; position:absolute; top:0; left:0; 
-	width:100%; height:0; border-bottom:1px solid #aaa; 
-	-webkit-transition:0.3s all; -moz-transition:0.3s all; -o-transition:0.3s all; transition:0.3s all;
+	content:''; 
+	position:absolute; 
+	top:0; left:0; 
+	width:100%; height:0; 
+	border-bottom:1px solid #aaa; 
+	-webkit-transition:0.3s all; 
+	-moz-transition:0.3s all; 
+	-o-transition:0.3s all; 
+	transition:0.3s all;
 }
 
-a#exit span:before { -webkit-transform:translateY(-50%) rotate(45deg); -ms-transform:translateY(-50%) rotate(45deg); -moz-transform:translateY(-50%) rotate(45deg);-o-transform:translateY(-50%) rotate(45deg); transform:translateY(-50%) rotate(45deg); }
-a#exit span:after { -webkit-transform:translateY(-50%) rotate(-45deg); -ms-transform:translateY(-50%) rotate(-45deg); -moz-transform:translateY(-50%) rotate(-45deg); -o-transform:translateY(-50%) rotate(-45deg); transform:translateY(-50%) rotate(-45deg); } 
+a#exit span:before { 
+	-webkit-transform:translateY(-50%) rotate(45deg); 
+	-ms-transform:translateY(-50%) rotate(45deg); 
+	-moz-transform:translateY(-50%) rotate(45deg);
+	-o-transform:translateY(-50%) rotate(45deg); 
+	transform:translateY(-50%) rotate(45deg); 
+}
+a#exit span:after { 
+	-webkit-transform:translateY(-50%) rotate(-45deg); 
+	-ms-transform:translateY(-50%) rotate(-45deg); 
+	-moz-transform:translateY(-50%) rotate(-45deg); 
+	-o-transform:translateY(-50%) rotate(-45deg); 
+	transform:translateY(-50%) rotate(-45deg); 
+} 
 
 #close:hover span:before,
-#close:hover span:after { border-color:#a67c52;
-	-webkit-transform:rotate(0deg); -ms-transform:rotate(0deg); -moz-transform:rotate(0deg); -o-transform:rotate(0deg); transform:rotate(0deg);
+#close:hover span:after { 
+	border-color:#a67c52;
+	-webkit-transform:rotate(0deg); 
+	-ms-transform:rotate(0deg); 
+	-moz-transform:rotate(0deg); 
+	-o-transform:rotate(0deg); 
+	transform:rotate(0deg);
 }
 
 
@@ -163,30 +270,62 @@ a#exit span:after { -webkit-transform:translateY(-50%) rotate(-45deg); -ms-trans
 
 /*Footer*/
 
-footer { z-index:100000; position:fixed; bottom:35px; left:3%;
-		width:94%; height:50px;
-		/*border:1px solid red;*/ }
+footer { 
+	z-index:100000; 
+	position:fixed; 
+	bottom:35px; left:3%;
+	width:94%; height:50px;
+	/*border:1px solid red;*/ 
+}
 
-.bottom_wrap { position:absolute; left:0; bottom:0; 
-			width:; height:20px; }
+.bottom_wrap { 
+	position:absolute; 
+	left:0; bottom:0; 
+	width:; height:20px; 
+}
 
-ul#sns { float:left; }
-ul#sns li { float:left; margin-right:20px; }
-ul#sns i { font-size:17px; margin-top:3px; }
-ul#sns i:hover { color:#fff; }
+ul#sns { 
+	float:left; 
+}
+ul#sns li { 
+	float:left; margin-right:20px; 
+}
+ul#sns i { 
+	font-size:17px; margin-top:3px; 
+}
+ul#sns i:hover { 
+	color:#fff; 
+}
 
-.white ul#sns i:hover { color:#a67c52; }
+.white ul#sns i:hover { 
+	color:#a67c52; 
+}
 
-span#site a { position:relative; float:left; font-size:14px; margin-top:0px; }
-span#site a:hover { color:#fff; }
+span#site a { 
+	position:relative; 
+	float:left; 
+	font-size:14px; margin-top:0px; 
+}
+span#site a:hover { 
+	color:#fff; 
+}
 
 /*.white span#site a { font-weight:300; color:#777; }*/
-.white span#site a:hover { color:#a67c52; }
+.white span#site a:hover { 
+	color:#a67c52; 
+}
 
-#load { position:absolute; top:0; right:0;
-		width:50px; height:50px; }
-#load span { width:50px; height:50px; }
-#load span img { width:100%; }
+#load { 
+	position:absolute; 
+	top:0; right:0;
+	width:50px; height:50px; 
+}
+#load span { 
+	width:50px; height:50px; 
+}
+#load span img { 
+	width:100%; 
+}
 
 
 
@@ -194,44 +333,94 @@ span#site a:hover { color:#fff; }
 
 /*Menu Page*/
 
-.white_wrap { z-index:1000000; position:absolute; top:0; left:0; 
-		width:100%; height:100%; opacity:0;
-		background-color:#fff; overflow:hidden; }
+.white_wrap { 
+	z-index:1000000; 
+	position:absolute; 
+	top:0; left:0; 
+	width:100%; height:100%; 
+	opacity:0;
+	background-color:#fff; 
+	overflow:hidden; 
+}
 
-.white_wrap a, .white_wrap span { color:#aaa; }
-
-
-
-.menu_box { -webkit-display:flex; display:flex;
-			position:absolute; top:50%; left:50%;
-			min-width:550px; min-height:250px; /*border:1px solid red;*/ }
-
-.menu_box #left { -webkit-flex:2 -ms-flex:2; -moz-flex:2; flex:2; 
-				margin-left:25px; }
-
-.menu_box #right { -webkit-flex:1; -ms-flex:1; -moz-flex:1; flex:1; }
+.white_wrap a, .white_wrap span { 
+	color:#aaa; 
+}
 
 
 
-#left h2 { position:absolute; top:0; left:0;
-		font-size:75px; font-weight:400; line-height:75px; color:#a67c52; }
-#left h3 { position:absolute; bottom:0; left:0;
-		font-size:30px; font-weight:400; color:#666; }
+.menu_box { 
+	-webkit-display:flex; 
+	display:flex;
+	position:absolute; 
+	top:50%; left:50%;
+	min-width:550px; min-height:250px; 
+	/*border:1px solid red;*/ 
+}
+
+.menu_box #left { 
+	-webkit-flex:2 
+	-ms-flex:2; 
+	-moz-flex:2; flex:2; 
+	margin-left:25px; 
+}
+
+.menu_box #right { 
+	-webkit-flex:1; 
+	-ms-flex:1; 
+	-moz-flex:1;
+	flex:1;
+}
 
 
 
-#right ul { -webkit-display:flex; display:flex; height:100%;
-			flex-flow:column; justify-content:space-between; }
+#left h2 { 
+	position:absolute; 
+	top:0; left:0;
+	font-size:75px; font-weight:400; 
+	line-height:75px; color:#a67c52; 
+}
+#left h3 { 
+	position:absolute; 
+	bottom:0; left:0;
+	font-size:30px; font-weight:400; 
+	color:#666;
+}
 
-#right ul li { display:block; position:relative; 
-				cursor:pointer; }
 
-#right ul li a { font-size:35px; font-weight:300; white-space:nowrap; color:#777;
-				-webkit-transition:all 1s; -moz-transition:all 1s; -o-transition:all 1s; transition:all 1s; }
-#right ul li:hover a { color:#a67c52; }
 
-#right ul li b { position:absolute; bottom:0; left:0; 
-				width:0; height:3px; background-color:#a67c52; }
+#right ul { 
+	-webkit-display:flex; 
+	display:flex; 
+	height:100%;
+	flex-flow:column; 
+	justify-content:space-between;
+}
+
+#right ul li { 
+	display:block; 
+	position:relative; 
+	cursor:pointer; 
+}
+
+#right ul li a { 
+	font-size:35px; font-weight:300; 
+	white-space:nowrap; color:#777;
+	-webkit-transition:all 1s; 
+	-moz-transition:all 1s; 
+	-o-transition:all 1s; 
+	transition:all 1s;
+}
+#right ul li:hover a { 
+	color:#a67c52; 
+}
+
+#right ul li b { 
+	position:absolute; 
+	bottom:0; left:0; 
+	width:0; height:3px; 
+	background-color:#a67c52; 
+}
 
 
 
@@ -239,14 +428,28 @@ span#site a:hover { color:#fff; }
 
 /*Loading*/
 
-.load { position:absolute; width:100%; height:100%; background-color:#fff; }
+.load {
+	position:absolute; 
+	width:100%; height:100%; 
+	background-color:#fff; 
+}
 
-.load ul { position:absolute; top:50%; left:50%; 
-		width:49px; height:30px; margin-top:-15px; margin-left:-24px; } 
-.load ul li { width:5px; height:100%; float:left; background-color:#a67c52;
-			-webkit-animation: stretchdelay 1.2s infinite ease-in-out;
- 			animation: stretchdelay 1.2s infinite ease-in-out; }
-.load ul li+li { margin-left:6px; }
+.load ul { 
+	position:absolute; 
+	top:50%; left:50%; 
+	width:49px; height:30px; 
+	margin-top:-15px; margin-left:-24px;
+} 
+.load ul li { 
+	width:5px; height:100%; 
+	float:left;
+	background-color:#a67c52;
+	-webkit-animation: stretchdelay 1.2s infinite ease-in-out;
+ 	animation: stretchdelay 1.2s infinite ease-in-out; 
+ }
+.load ul li+li { 
+	margin-left:6px;
+}
 
 
 .load ul li:nth-child(2) {
