--- a/doc/patagonia/css/common.css
+++ b/doc/patagonia/css/common.css
@@ -1,5 +1,5 @@
-@charset "utf-8";
 /* CSS Document */
+@charset "utf-8";
 
 
 
@@ -53,7 +53,7 @@ img {
 /*Custom Scroll*/
 
 ::-webkit-scrollbar {
-	width:5px;
+	width:5px; height:5px;
 }
 
 ::-webkit-scrollbar-track {
