--- a/doc/designer/css/common.css
+++ b/doc/designer/css/common.css
@@ -60,7 +60,7 @@ a[href^="tel"] {
 /*Custom Scroll*/
 
 ::-webkit-scrollbar {
-	width:5px; width:5px;
+	width:5px; height:5px;
 }
 
 ::-webkit-scrollbar-track {
